# extension_system

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CompilerDetection.cmake  Doxyfile  Readme.md  Readme.txt  appveyor.yml  contributors.txt
examples/example1/: Extension.cpp  Extension1.cpp  Interface.hpp  main.cpp
examples/example2/: Extension.cpp  Interface.hpp  main.cpp
src/extension_system/: DynamicLibrary.cpp  DynamicLibrary.hpp  Extension.hpp  ExtensionSystem.cpp  ExtensionSystem.hpp  TypeSystem.hpp  filesystem.cpp  filesystem.hpp  macros.hpp  string.hpp
test/: Interfaces.hpp  catch.hpp  extension.cpp  main.cpp
